# core-eng

./: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
.github/workflows/: rust.yml
deno-proxy/: Cargo.toml  README.md  test.mjs
deno-proxy/src/: lib.rs  main.rs
deno-proxy/tests/: rpc.rs
frost-coordinator/: Cargo.toml  README.md
frost-coordinator/src/: coordinator.rs  lib.rs  main.rs
frost-signer/: Cargo.toml
frost-signer/src/: config.rs  main.rs  net.rs  signer.rs  signing_round.rs
frost-signer/tests/: messages.rs
frost-test/: Cargo.toml
frost-test/docs/: frost-btc.md
frost-test/src/: bitcoind.rs  lib.rs  sync_test.rs  v1.rs
frost-test/tests/: frost-btc.rs
relay-server/: README.md
relay-server/src/: http.rs  io_stream.rs  lib.rs  listner.rs  main.rs  mem_io_stream.rs  mem_state.rs  remote_state.rs  server.rs  state.rs
sbtc-ops/: README.md
stacks-coordinator/: Cargo.toml  README.md
stacks-coordinator/conf/: coordinator.toml
stacks-coordinator/js/: README.md
stacks-coordinator/src/: config.rs  coordinator.rs  error.rs  fee_wallet.rs  lib.rs  main.rs  make_contract_call.rs  node_client.rs  peg_queue.rs  peg_wallet.rs  stacks_node.rs  stacks_transaction.rs  stacks_wallet_js.rs
stacks-dev-guide/: guide.md  working-with-projects.md
stacks-js-rs/: Cargo.toml  README.md  console.mjs  mirror.mjs  mirror.ts  rpc.mjs  rpc.ts  stacks.mjs  stacks.ts
stacks-signer/: Cargo.toml
stacks-signer/conf/: signer.toml  stacker.toml
stacks-signer/src/: main.rs  secp256k1.rs
yarpc/: Cargo.toml  README.md
yarpc/js/: lib.ts  (+3 more)
(+35 files in other folders)
